# tripwithmarco

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml
.github/workflows/: fly-deploy.yml  test.yml
backend/: CLAUDE.md  config.py  llm.py
backend/agents/: eval_agent.py  models.py  orchestrator.py  planner_agent.py  planning_agent.py  repair_agent.py  research_agent.py  route_agent.py  tool_executor.py  tools.py
backend/api/: app.py  rate_limit.py  schemas.py
backend/api/routes/: admin.py  auth.py  chat.py  trips.py
backend/auth/: deps.py  jwt_utils.py
backend/db/: database.py  models.py  trip_store.py
backend/db/demo_trips/: 20260101_000001.json  20260101_000002.json
backend/email/: briefing.py  scheduler.py
backend/evals/: judge.py
backend/prompts/: marco.md
backend/tools/: cache.py  flights.py  hotels.py  places.py  scratch.py  weather.py
data/: trips.db
frontend/: CLAUDE.md  README.md  api_client.py  app.py  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AutocompleteInput.jsx  BudgetPanel.jsx  ChatPanel.jsx  ChecklistPanel.jsx  DayCard.jsx  EmailBriefingConfig.jsx  ExpenseTracker.jsx  Layout.jsx  ProtectedRoute.jsx  SharePanel.jsx  TripMap.jsx
frontend/src/hooks/: useGeocode.js  (+5 more)
scripts/: migrate_to_postgres.py
tests/: conftest.py  test_api.py  test_llm_pipeline.py  test_planning_agent.py  test_road_trip.py  test_tools.py
tests/evals/: test_extraction.py  test_itinerary_judge.py  test_pipeline_quality.py
(+17 files in other folders)
